# AIC

./: .gitignore  README.md  aic  environment.yml
backend/: README.md  pyproject.toml
backend/app/: __init__.py  main.py
backend/app/api/: routes_designs.py
backend/app/core/: dependencies.py  settings.py
backend/app/models/: __init__.py  schemas.py
backend/app/services/: __init__.py  cadquery_macros.py  design_service.py
backend/app/services/compilers/: __init__.py  cadquery_compiler.py
backend/app/services/executors/: __init__.py  cadquery_executor.py  runtime.py
backend/app/services/gateway/: __init__.py  model_gateway.py
backend/app/services/planners/: __init__.py  ollama_planner.py  prompt_engineering.py  rule_based_planner.py
backend/app/services/revision/: __init__.py  revision_engine.py
backend/app/services/storage/: cache_store.py  file_store.py
backend/app/services/validation/: design_validator.py  (+1 more)
backend/tests/: test_compiler.py  test_planner.py  test_prompt_engineering.py  test_revision.py
docs/: setup.md  windows-desktop.md
frontend/: package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  api.ts  desktop.ts  index.css  types.ts
frontend/src-tauri/: Cargo.toml  tauri.conf.json
frontend/src-tauri/capabilities/: default.json
frontend/src-tauri/icons/: icon.icns
frontend/src-tauri/src/: desktop.rs  lib.rs  main.rs
frontend/src/components/: ErrorBoundary.tsx  ModelViewer.tsx
packaging/runtime/: README.md  runtime-manifest.json
packaging/scripts/: build_windows_runtime.ps1
scripts/: aic_tui.py
